# ChangeLog for media-tv/xbmc
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-tv/xbmc/ChangeLog,v 1.184 2013/05/24 14:05:55 aballier Exp $

  24 May 2013; Alexis Ballier <aballier@gentoo.org> xbmc-9999.ebuild:
  Fix ffmpeg deps: upstream recommends ffmpeg so this one shall come first in
  the || dep. xbmc doesnt even compile against libav, meaning the dep is in
  theory wrong but left there in case someone eventually gets upstream to fix
  it. Do not depend on virtual/ffmpeg which is not finegrained enough here (and
  also rather useless because of the libpostproc dep) since ffmpeg releases
  more often than libav these days and virtual/ffmpeg-9 depends on a masked
  ffmpeg version while xbmc only requires ffmpeg-1 which is unmasked.

*xbmc-12.2 (23 May 2013)

  23 May 2013; Mike Frysinger <vapier@gentoo.org> +xbmc-12.2.ebuild,
  xbmc-9999.ebuild:
  Version bump #468518 by Anthony Ryan.

  24 Apr 2013; Mike Frysinger <vapier@gentoo.org>
  files/xbmc-13.0-system-projectm.patch:
  Fix typos in projectm patch #466746 by candrews.

  23 Apr 2013; Mike Frysinger <vapier@gentoo.org> xbmc-12.1-r1.ebuild,
  xbmc-9999.ebuild:
  Have USE=X require USE=sdl #466584 by Tomáš Chvátal.

*xbmc-12.1-r1 (20 Apr 2013)

  20 Apr 2013; Tomáš Chvátal <scarabeus@gentoo.org>
  +files/xbmc-12.0-system-projectm.patch,
  +files/xbmc-13.0-system-projectm.patch, +xbmc-12.1-r1.ebuild,
  xbmc-9999.ebuild:
  Update to python-single-r1 wrt bug#458682. Apply projectm unbundle patch.
  Apply libav patchset provided by Anton Khirnov to 12.1-r1 ebuild and remove
  keywords as it depends on too new ffmpeg/libav with this. (the patchset still
  needs few touchups before submitting to master/9999 ebuild)

  13 Apr 2013; Mike Frysinger <vapier@gentoo.org> files/generate.sh,
  xbmc-9999.ebuild:
  Refresh generated python interfaces #464048 by Marcel Unbehaun.

  13 Apr 2013; Mike Frysinger <vapier@gentoo.org> xbmc-9999.ebuild: