@@ -21,19 +21,21 @@ DIST xbmc-12.0.tar.gz 67176825 SHA256 53018cd014b5203df5e5ef4080931ef499d3740815
 DIST xbmc-12.1.tar.gz 67430677 SHA256 29e3f36e1884913088f786179a4c925f52e46e9ba7bf8f24e35e934177c01ec3 SHA512 a8b5194766e32e09fa65c0e3656ff180c15761ce2348dc8a1fff0c65247b47e644db4fc91a829e73907b6a52c8e1bdebf624640b9dd06cea2c46bda1d2b3b4a5 WHIRLPOOL 13dbaf040faaaef1b04da892949e9684d7a958cec286b3a5f8cb449ec0fea6b5f96c2a473ece840b86103eb03dd1f39dd66411e5b0526785256d2cc92e1e95e8
 DIST xbmc-12.2.tar.gz 67663000 SHA256 b2330634fc513d27a44b131bbbe4ca6b61d60a1fe6c7ca27a7dc749df0bcea1c SHA512 d6812886b4d1a5c28c8150b164d714f8855ccb1ac4e74811c9eb03d09e12a6f05bedd3c034132ae79e0bff66efd54ced9c2c1140da6b4ad7b82dbb90fa3d1c39 WHIRLPOOL c3fc97e5f45a38a259bca06af0b171630ac16832034410e45174d900358b1d16b72940b29475dcad72a2198d8722859a229152379ab7784a7d61f961eb261ddb
 DIST xbmc-9999-20130413-generated-addons.tar.xz 53088 SHA256 20f752b240f2fd9f0f5b061d576c9d215d494bdaeee0d6118a413b2cf62567bc SHA512 203d1e143f83c03f5700710167b050d09d0d7996b8499d47f886009a801bab9eb2ae67ab612b551a9d2e541fc622e08a21f91df4206b3dd456f2b2bc12d514c3 WHIRLPOOL 92470a764ddd55cc2ea242b7b7df2a15c40fd6b273c30510624ef11a7b7870418956b3ad0df0853334053e50c4b141e00969f8458a9bd13aaf9dfeb3f79902a6
+DIST xbmc_backports-12-1.tar.bz2 5010 SHA256 a222c32f5a4a0a8690b1544674cfbfeddf81943e85b6ea716768b83c9eba5fa8 SHA512 19b29808f7a3a7b0642f8463bdd229041588d2f42952fe55a17ab69b5b259cde249eb763598893463218d0ab6c747bf3c81e045bdbf5655f9f5f2d2067cb35d2 WHIRLPOOL cc6870dabca8b53a1a6055a4218a8f9bbb2c031ab3b928040325fb121ea75ae6db431542660d28c3bc6900a904e2c0949d69651b2f63faffe8bc7f670d519f06
 EBUILD xbmc-11.0-r1.ebuild 6507 SHA256 8a061777222215b70be0e356744a733da97bff974afa311c945b33c46938cfc9 SHA512 118a994f758de41de5c1e294d4982750db0e55e15388d219a8bb0b5d703b7662910028effc002eb6923e5c2e8b4a65583ba03974e92b7f5f351d689ab729c65f WHIRLPOOL 198d13ab2449bcb49fcc8ffa3975a340af3ee97d1a9d0e2848977e4fd5809f56c84355b905dbc0fdb433cfa71c4b9f828ffd3fe5a9c06f70685e90d15418a878
 EBUILD xbmc-11.0.ebuild 6295 SHA256 5a700f39848da84db6e79eed1a316dbec2cea01252ae412f2219f63b653e8c71 SHA512 02fd0286655573965dc9204d1580d69dce5a9beef049a92ad10d619e39ef9ad07524b4172503626a442c8f4969200e4e9587b31e776fc5ca8a2b3f2596a11b12 WHIRLPOOL 1b03964b773587217dea06243a2c4b9f459e7deb3f6efbaed17ae8fa0b80e0f83e286b03d97a4ac2f19fce5df7bb609232a38f6c7366183c42165013ed7f08d6
 EBUILD xbmc-12.0.ebuild 6481 SHA256 b232410feb0c2715dc2b2e9ad9204f1e1f09a9237c0cc57b9a2f23f8a9e2b8d3 SHA512 65a1cac4a88b806ecc327cfec1ac3ef90dc73868a82c8ace3a47fcf5eb2b61f125d317646c096b671bc88f7814e08231ace11312e74e595a8c421696bd1982c3 WHIRLPOOL da70651c655c64ca82895236d11e1ae4462cce62809ab0338364b142bcd03c42c6d244c75591df381cc93bc9809d44b6f5f6a9a518fd52e150d4c520a21d2622
 EBUILD xbmc-12.1-r1.ebuild 7075 SHA256 34a0c48fca3eadf20e15fc8b83495c9b3c4ee3672125cf00cf2ec721e1d625b5 SHA512 4b5a51e09e97aac67985588d2fa44891f3d409bff554ce9e80c9083a2fbe1b564a8652fedd4c8553c427894e58e4b30bac33236b3d396cf49eb290ffcb26f627 WHIRLPOOL 6cef003efd1e1cecd1ffc6366c0f123ba5c8fb58b8f8f738678fbbc3fcfb7b76be22a6ef9e0289afb8d900f84770cf4d588147b3fda05423f15fc9f0e6ac226f
 EBUILD xbmc-12.1.ebuild 6868 SHA256 9f0c53b808bfdcce7f89e31ec66c520ea5f4163068c8f526de0c44ee3b4ce1e9 SHA512 3d4ad64cdc2c4b19923e9143caf9210d9377c26af4e7bf6a1b22dfc660320ed2493c4617ea7122ef1c84b5d875240458f3d332ae58a649141e64b3571f4d4f99 WHIRLPOOL 6009890ca8b44e18f0348399639734752fe22aaa09d702c4f0c4da14ffb9d8a99828404fcf10f7913052af56c8f5bcbe60490bc060a3a63e71d7ef64a2e5f08f
+EBUILD xbmc-12.2-r1.ebuild 7154 SHA256 3f007accc435edf6d44117158eb05e1ad32713974a33f35702fdd4247d77d638 SHA512 51b13f0b3d3bd5f4fbe62abf11b42e009fba82391410aa6e7f2ce316f12a61256f4f61ea231bc33f2aadace9c864589b0b14d141a100f0fe93d980ed07acb013 WHIRLPOOL cbe92219fbe94d47c915f4459f83450e04b989c5817dfff350b1c6c936559ad692d5e9641bf8876707bcdc1ec3152d401355b50c8bd499e5a44bd537d218ecbe
 EBUILD xbmc-12.2.ebuild 6913 SHA256 e87201fd81099970a2c700425b679ccae94643120a39398018dac2f531a63845 SHA512 e2cacdfbb00219c00c90bd85f17e53e4f82c2514d455908afefb72d9c646a239d61a2a9446d7d88b3db92fdbbad10226dff0c5d55d71da495b8c25e60c7be40d WHIRLPOOL b43c29da1e353157c623867cb19d45e135e775b78638e5640f5d9aa9a774222cd3b4cbc70ded5c6c928743d1b2f326828832d109af55a55439e5f620c3177a67
 EBUILD xbmc-9999.ebuild 8322 SHA256 843049a3fecd2c9b1ab7c66d9f4c8c8f67f85351f30d5bd3d90ca22d15257099 SHA512 301772fc0c82c18a6539e6d5bb0e5b54fba46dca563cc38258f1af6f01e9da96c71ceafbf13e0f63c3b610e0072fb2adf476529067dfa88085e5b0fa49449c6b WHIRLPOOL 5dfab91f2edcd2e9e16ec5e9fb3b225016388c134a1d09ca5a055f3170a643efb64227c58ab01f886a33ad34ccded47a59cc589cd1807499df3aed35d9529b57
-MISC ChangeLog 30307 SHA256 cbb8af2d35a476521415c3d74c6882a3244061806fb524bb5be4d4e9fcb0203f SHA512 6ba6a33d1338bc249b16882061432b39b2e8ff20a7e2865cc4f226d41956a9aa3a486eec2a9a485ac87a879199dbc964a43a9c12ab8d57ba457ecc5ca3a0e654 WHIRLPOOL 6bd40efda2c85226193d2f490267620aef5936ac15990efaf90e0caec720368bf0115e62eb79a440c2e5f28de41e9859903548950b1245c72ca0a80a417984a6
+MISC ChangeLog 30531 SHA256 f1361dacd823bf8136129d13860a643fe813b32be017d4922d1bf2d8fdac10d1 SHA512 cef775541ca4f0cab841e4989d272cab6c28eedac682c04bfed79fde757d8d7cbb521c7ba22daff7104c02563c410acbc4ee9620ee7d2ef79b746c1aabfa8fe3 WHIRLPOOL 48c12d9b0023d61a8643f95fd4ed4be482232c5197148b21b1912da560e8453f2ff1c10ce27b82c8ae2f6c73ebc67561c4570cc891359e6aeb8d3dcf835c9dc5
 MISC metadata.xml 1140 SHA256 00929104e646c293b0ee5dc8a42701b940a0e908f7293c15a277ce138a56999a SHA512 e6a4b148543b613ffad57925310bc7562629e18f726cc958bf2de64020b0ec3d72cf82eb2e506a194c1c3610361d96ff41245d1e7a411be08f87719abbb80410 WHIRLPOOL 92f8748f2fedb7fe0bd34ed29e4e4ff25cb55b7ceacc15a9a4c561c3544530d216d5494de1862591156f3290e641a38aa91000c2b33e850d8a923e1818eb5ac1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlGfc8QACgkQvFcC4BYPU0psqgCgmOnGCV3rKbw6sXC7qyNYkDPS
-lfYAn2MGAwIYCdfss8DSOcS6ypb25AUM
-=0KJY
+iEYEAREIAAYFAlG6TBQACgkQvFcC4BYPU0rKWACgmkS8YUPOqJcMIxDtuSMFJn8x
+6P8AoIfEjc2zfP1lELwJaaVR0DHU9fhy
+=JAkG
 -----END PGP SIGNATURE-----
